errores blog corregidos

--- a/src/app/Pages/blog/blog.component.html
+++ b/src/app/Pages/blog/blog.component.html
@@ -685,7 +685,7 @@
                                 <p>
                                     En resumen, adoptar una mascota adulta puede ser una excelente opción para muchas personas. No solo obtienes 
                                     un animal entrenado y con una personalidad formada, sino que también ayudas a los refugios y das un hogar
-                                    a un animal que lo necesita. Si <a href="https://play.google.com/store/games" target="_blank">descargs nuestra 
+                                    a un animal que lo necesita. Si <a href="https://play.google.com/store/games" target="_blank">descarga nuestra 
                                     aplicación</a> podrás filtrar los animales disponibles por su edad y ayudar a uno de estos amiguitos peludos.
                                 </p>
                                 <!-- Fin cuerpo noticia -->
@@ -714,8 +714,8 @@
                                     </li>
                                     <hr>
                                     <li class="custom-link">
-                                        <a type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#entrada5">
-                                            Razones por las que adoptar a una mascota adulta
+                                        <a type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#entrada2">
+                                            ¡La nueva ley de mascotas ya está aquí!
                                         </a>
                                     </li>
                                 <!-- Fin entradas 2023-->
