--- a/src/app/Pages/ContactUs/contact-us.component.css
+++ b/src/app/Pages/ContactUs/contact-us.component.css
@@ -22,6 +22,10 @@ h1 {
     margin-top: 200px;
 }
 
+h5 {
+    color: #8FA5D5;
+}
+
 form {
     width: 100%;
     justify-self: center !important;
@@ -146,7 +150,7 @@ textarea:focus {
     margin-top: 20px;
     text-align: left;
     font-family: 'Poppins', sans-serif;
-    color: #8FA5D5
+    color: #292C35
 }
 
 #informacion h5 {
