poniendo un small informativo

--- a/src/app/Pages/ContactUs/contact-us.component.html
+++ b/src/app/Pages/ContactUs/contact-us.component.html
@@ -55,6 +55,11 @@
                 El mensaje debe tener al menos 3 caracteres
               </div>
             </div>
+
+            <div>
+              <small class="form-text text-muted">Los campos obligatorios están marcados con *</small>
+            </div>
+
             <div class="text-center text-md-start">
               <div class="form-group bloque" id="botones">
                 <button type="submit" class="btn btn-primary" [disabled]="!this.comprobarCamposObligatorios(camposCorrectos)">Enviar</button>
