--- a/src/app/Pages/contact-form/contact-form.component.html
+++ b/src/app/Pages/contact-form/contact-form.component.html
@@ -1,3 +1,4 @@
+<body>
 
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,15 +11,18 @@
   <br>
   <br>
   <br>
+
   <div id="info">
+  <img src="./assets/images/fondopets.jpg" id="imagen" class="float-right">
   <p>Si eres una protectora con animales para visibilizar o un particular con una mascota de la que ya no te puedes
-      encargar, ponte en contacto con nosotros y te ayudaremos a encontrarle un nuevo hogar</p>
+      encargar, rellena este formulario y te ayudaremos a encontrarle un nuevo hogar</p>
   </div>
+
   <br>
   <br>
 
 </div>
-  
+
     <div id="flotante">
     <form (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm" class="justify-content-center" id="formulario"> <!--creamos nuestra variable template-->
   
@@ -181,4 +185,4 @@
     </form>
   </div> <!--elemento flotante-->
     
-    
+    </body>
