--- a/src/app/Pages/ContactUs/contact-us.component.css
+++ b/src/app/Pages/ContactUs/contact-us.component.css
@@ -11,7 +11,9 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+
 h1 {
+    text-align: center;
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
     font-size: 5rem;
