--- a/src/app/Pages/contact-form/contact-form.component.css
+++ b/src/app/Pages/contact-form/contact-form.component.css
@@ -28,13 +28,20 @@ p {
 form {
     padding: 10px;
 }
-/*
-.container {
-    justify-content: center !important;
-    justify-items: center !important;
-    align-items: center;
-}
-*/
+
+.form-control {
+    border-bottom: 2px solid #8FA5D5;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-radius: 0px;
+  }
+
+  .form-control:focus {
+    box-shadow: none;
+    border-color: #F7A940;
+  }
+
 input {
     padding: 10px;
     border-color: #8FA5D5;
@@ -67,7 +74,11 @@ input:focus {
     font-weight: 200;
     font-size: 1rem;
     color: #292C35;
-    border-color: #8FA5D5;
+    border-color: 2px solid #8FA5D5 !important;
+    border-top: 2px solid #8FA5D5 !important;
+    border-left: 2px solid #8FA5D5 !important;
+    border-right: 2px solid #8FA5D5 !important;
+    border-radius: 10px;
 }
 
 #seleccionarProvincia:focus {
@@ -75,6 +86,9 @@ input:focus {
     border-width: 2px;
     padding: 10px;
     border-color: #F7A940;
+    border-top: 2px solid #F7A940 !important;
+    border-left: 2px solid #F7A940 !important;
+    border-right: 2px solid #F7A940 !important;
     background-color:whitesmoke;
 }
 
@@ -147,7 +161,11 @@ button:disabled {
 textarea {
     padding: 10px;
     border-color: #8FA5D5;
-    border-width: 2px;
+    border-color: 2px solid #8FA5D5 !important;
+    border-top: 2px solid #8FA5D5 !important;
+    border-left: 2px solid #8FA5D5 !important;
+    border-right: 2px solid #8FA5D5 !important;
+    border-radius: 10px !important;
     font-family: 'Poppins', sans-serif;
     font-weight: 200;
     font-size: 1rem;
@@ -159,6 +177,9 @@ textarea {
     border-width: 2px;
     padding: 10px;
     border-color: #F7A940;
+    border-top: 2px solid #F7A940 !important;
+    border-left: 2px solid #F7A940 !important;
+    border-right: 2px solid #F7A940 !important;
     background-color:whitesmoke;
 }
 #botones {
