--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -8,7 +8,7 @@
     <div class="row introduccion">
         <div class="col-md-6" style="margin-top: 150px; text-align: right;">
             <h1>Adopta Una Mascota</h1>
-            <h2><b>La aplicación con la que <br class="d-md-none d-lg-block"> dar una segunda oportunidad</b></h2>
+            <h2 style="font-weight: 700;">La aplicación con la que <br class="d-md-none d-lg-block"> dar una segunda oportunidad</h2>
             <br>
             <a href="#cta" type="button" class="btn btn-primary boton-resalte">Descarga la app</a>
         </div>
