--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -17,11 +17,11 @@
             Paula Muerte y Raquel Álvarez</strong>
           </p>
           <div>
-            <a class="fb-ic" href="https://es-es.facebook.com/" target="_blank"> <i class="fa fa-facebook"></i></a>
-            <a class="fb-ic" href="https://twitter.com/?lang=es/" target="_blank"> <i class="fa fa-twitter"></i></a>
-            <a class="fb-ic" href="https://www.instagram.com/" target="_blank"> <i class="fa fa-instagram"></i></a>
-            <a class="fb-ic" href="https://es.linkedin.com/" target="_blank"> <i class="fa fa-linkedin"></i></a>
-            <a class="fb-ic" href="https://www.pinterest.es/" target="_blank"> <i class="fa fa-pinterest"></i></a>
+            <a class="fb-ic" href="https://es-es.facebook.com/" target="_blank"> <i class="bi bi-facebook"></i></a>
+            <a class="fb-ic" href="https://twitter.com/?lang=es/" target="_blank"> <i class="bi bi-twitter"></i></a>
+            <a class="fb-ic" href="https://www.instagram.com/" target="_blank"> <i class="bi bi-instagram"></i></a>
+            <a class="fb-ic" href="https://es.linkedin.com/" target="_blank"> <i class="bi bi-linkedin"></i></a>
+            <a class="fb-ic" href="https://www.pinterest.es/" target="_blank"> <i class="bi bi-pinterest"></i></a>
           </div>
         </div>
         <!-- Fin presentación empresa -->
