--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -12,6 +12,9 @@
   <a class="navbar-brand" href="../landingPage/home">
     <img src="/assets/logo-png.png" class="d-inline-block align-top" alt="">
   </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
