--- a/src/app/Pages/contact-form/contact-form.component.css
+++ b/src/app/Pages/contact-form/contact-form.component.css
@@ -74,21 +74,19 @@ input:focus {
     font-weight: 200;
     font-size: 1rem;
     color: #292C35;
-    border-color: 2px solid #8FA5D5 !important;
-    border-top: 2px solid #8FA5D5 !important;
-    border-left: 2px solid #8FA5D5 !important;
-    border-right: 2px solid #8FA5D5 !important;
-    border-radius: 10px;
+    border-bottom: 2px solid #8FA5D5;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-radius: 0px;
+    height: 42px;
 }
 
 #seleccionarProvincia:focus {
-    box-shadow: 0 0 5px #F7A940;
+    box-shadow: none;
     border-width: 2px;
     padding: 10px;
     border-color: #F7A940;
-    border-top: 2px solid #F7A940 !important;
-    border-left: 2px solid #F7A940 !important;
-    border-right: 2px solid #F7A940 !important;
     background-color:whitesmoke;
 }
 
@@ -161,11 +159,11 @@ button:disabled {
 textarea {
     padding: 10px;
     border-color: #8FA5D5;
-    border-color: 2px solid #8FA5D5 !important;
-    border-top: 2px solid #8FA5D5 !important;
-    border-left: 2px solid #8FA5D5 !important;
-    border-right: 2px solid #8FA5D5 !important;
-    border-radius: 10px !important;
+    border-bottom: 2px solid #8FA5D5;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-radius: 0px;
     font-family: 'Poppins', sans-serif;
     font-weight: 200;
     font-size: 1rem;
@@ -173,13 +171,10 @@ textarea {
 }
 
 #textArea:focus {
-    box-shadow: 0 0 5px #F7A940;
+    box-shadow: none;
     border-width: 2px;
     padding: 10px;
     border-color: #F7A940;
-    border-top: 2px solid #F7A940 !important;
-    border-left: 2px solid #F7A940 !important;
-    border-right: 2px solid #F7A940 !important;
     background-color:whitesmoke;
 }
 #botones {
