--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,3 +1,8 @@
+<head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+</head>
+
+
 <!-- Footer -->
 <footer class="text-center text-lg-start custom-footer">
   <!-- Footer  -->
@@ -17,11 +22,30 @@
             Paula Muerte y Raquel Álvarez</strong>
           </p>
           <div>
-            <a class="fb-ic" href="https://es-es.facebook.com/" target="_blank"> <i class="bi bi-facebook"></i></a>
-            <a class="fb-ic" href="https://twitter.com/?lang=es/" target="_blank"> <i class="bi bi-twitter"></i></a>
-            <a class="fb-ic" href="https://www.instagram.com/" target="_blank"> <i class="bi bi-instagram"></i></a>
-            <a class="fb-ic" href="https://es.linkedin.com/" target="_blank"> <i class="bi bi-linkedin"></i></a>
-            <a class="fb-ic" href="https://www.pinterest.es/" target="_blank"> <i class="bi bi-pinterest"></i></a>
+            <a class="fb-ic" href="https://es-es.facebook.com/" target="_blank"> 
+              <i class="bi bi-facebook"></i>
+            </a>
+
+
+            <a class="fb-ic" href="https://twitter.com/?lang=es/" target="_blank">
+               <i class="bi bi-twitter"></i>
+            </a>
+
+
+            <a class="fb-ic" href="https://www.instagram.com/" target="_blank"> 
+              <i class="bi bi-instagram"></i>
+            </a>
+
+
+            <a class="fb-ic" href="https://es.linkedin.com/" target="_blank">
+               <i class="bi bi-linkedin"></i>
+            </a>
+
+
+            <a class="fb-ic" href="https://www.pinterest.es/" target="_blank">
+               <i class="bi bi-pinterest"></i>
+            </a>
+
           </div>
         </div>
         <!-- Fin presentación empresa -->
