Eliminado el subrayado de los enlaces del footer, ahora solo se muestra al pasar por encima de los mismos

--- a/src/app/Components/footer/footer.component.css
+++ b/src/app/Components/footer/footer.component.css
@@ -50,4 +50,10 @@ footer {
 
 .text-reset:hover {
     color: #8FA5D5 !important;
+    text-decoration: underline;
 }
+
+.text-reset {
+    text-decoration: none;
+}
+
