--- a/src/app/Pages/home/home.component.css
+++ b/src/app/Pages/home/home.component.css
@@ -37,17 +37,17 @@ h1 {
     background-position: center;
     background-repeat: no-repeat;
     height: 700px;
-    margin-top: 77px;
+    margin-top: 70px;
 }
 
 .introduccion-sm {
-    padding: 5%;
+    padding: 7% 5% 5% 5%;
     background-image: url("/assets/images/header.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    margin-top: 150px;
-    height: 300px;
+    margin-top: 65px;
+    height: 250px;
 }
 
 .cta-app {
@@ -89,8 +89,6 @@ h1 {
     border: 3px solid #fff;
     border-radius: 50%;
 }
-
-
 
 
 
