--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -17,9 +17,9 @@
         </div>
     </div>
     <div class="row introduccion-sm d-md-none d-sm-block text-center">
-        <div class="col-md-6" style="margin-top: 5%;">
+        <div class="col-md-6" style="margin-top: -20px;">
             <h1>Adopta Una Mascota</h1>
-            <h2><b>La aplicación con la que dar una segunda oportunidad</b></h2>
+            <h2 style="font-weight: 700;">La aplicación con la que dar una segunda oportunidad</h2>
             <br>
             <a href="#cta" type="button" class="btn btn-primary boton-resalte">Descarga la app</a>
         </div>
@@ -27,9 +27,9 @@
 </section>
 <section class="container-fluid d-md-none d-sm-block">
     <div class="row introduccion-sm text-center">
-        <div class="col-12" style="margin-top: 5%;">
+        <div class="col-12">
             <h1>Adopta Una Mascota</h1>
-            <h2><b>La aplicación con la que dar una segunda oportunidad</b></h2>
+            <h2 style="font-weight: 700;">La aplicación con la que dar una segunda oportunidad</h2>
             <br>
             <a href="#cta" type="button" class="btn btn-primary boton-resalte">Descarga la app</a>
         </div>
